--- a/Paid App/manifest.json
+++ b/Paid App/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Project Helium (Free)",
-  "description": "A legendary 2D shooter!",
-  "version": "0.4.2",
+  "name": "Project Helium",
+  "description": "A legendary 2D shooter! (Full Version)",
+  "version": "0.5",
   "app": {
     "launch": {
-      "local_path": "index.html"
+      "local_path": "paid.html"
     }
   },
   "icons": {
