--- a/Chrome/Free App/manifest.json
+++ b/Chrome/Free App/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Project Helium (Free)",
+  "name": "Project Helium Beta",
   "description": "A legendary 2D shooter!",
-  "version": "0.7.1",
+  "version": "0.8",
   "app": {
     "launch": {
       "local_path": "index.html"
