--- a/Chrome/Free App/manifest.json
+++ b/Chrome/Free App/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Project Helium Beta",
   "description": "A legendary 2D shooter!",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "app": {
     "launch": {
       "local_path": "index.html"
@@ -9,6 +9,6 @@
   },
   "icons": {
     "16": "icon_16.png",
-    "128": "icon_128.png"
+    "128": "images/128logo.png"
   }
 }
